# FilterBets

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Makefile  PROGRESS.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  git_workflow_orchestrator.py  pyproject.toml
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260114_1017_43fec3039ba3_add_core_models_for_phase_2.py  20260114_1348_2aaaf9e8fd7f_add_team_computed_stats_and_backtest_.py  20260114_1936_2a03b27e9206_add_filter_matches_and_scan_frequency.py  20260115_1118_41e2e0718d69_add_metadata_to_fixtures.py  20260115_1135_fix_team_abbreviation_length.py  20260115_1200_fix_team_column_lengths.py  20260115_1301_a0cae0d934ff_add_unique_constraint_to_team_stats.py  20260115_1324_d05f4bf8ffa8_add_unique_constraint_to_standings.py  20260115_1426_8e22981990f9_add_features_metadata_column_to_fixtures.py  20260116_1330_886f4f006caa_add_logo_url_to_leagues.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  (+10 more)
backend/app/bot/: __init__.py  run_bot.py  telegram_bot.py
backend/app/models/: __init__.py  backtest_job.py  backtest_result.py  filter.py  filter_match.py  fixture.py  league.py  live_match.py  standing.py  team.py  team_computed_stats.py  team_stats.py  user.py  venue.py
backend/app/schemas/: auth.py  backtest.py  backtest_job.py  common.py  filter.py  fixture.py  league.py  live_filter.py  notification.py  scanner.py  team.py  team_stats.py  telegram.py  user.py
backend/app/services/: auth.py  backtest.py  data_ingestion.py  data_loader.py  filter_engine.py  live_filter_engine.py  mock_live_data.py  scanner_service.py  stats_calculator.py  team_stats_calculator.py  telegram_service.py
backend/app/tasks/: __init__.py  backtest_tasks.py  celery_app.py  notification_tasks.py  scanner_tasks.py  stats_tasks.py
backend/app/utils/: pagination.py  security.py
backend/scripts/: check_data_counts.py  import_odds.py  import_premier_league.py  import_processed_data.py  ingest_all_data.py  ingest_data.py  test_data_ingestion.py
backend/test_api_with_bruno/: README.md  bruno.json
backend/test_api_with_bruno/Auth/: Login.bru  Refresh Token.bru  Register.bru
backend/test_api_with_bruno/Backtest/: Get Backtest Job by ID.bru  Get Backtest Jobs.bru  Run Backtest.bru  folder.bru
backend/test_api_with_bruno/Filters/: Create Filter.bru  Delete Filter.bru  Get All Filters.bru  Get Filter by ID.bru  Update Filter.bru  folder.bru
backend/test_api_with_bruno/Fixtures/: Get All Fixtures.bru  Get Fixture by ID.bru  Get Fixtures by Date Range.bru  folder.bru
backend/test_api_with_bruno/Leagues/: Get All Leagues.bru  Get League by ID.bru  folder.bru
backend/test_api_with_bruno/Scanner/: Get Scanner Jobs.bru  Run Scanner.bru  folder.bru
backend/test_api_with_bruno/System/: Health Check.bru  Root Endpoint.bru  folder.bru
backend/tests/: __init__.py  conftest.py  test_advanced_metrics.py  test_auth.py  test_backtest.py  test_backtest_analytics.py  test_backtest_jobs.py  test_filter_engine.py  test_filter_validation.py  test_filter_validation_endpoint.py  test_filters.py  test_fixtures.py  test_health.py  test_integration.py  test_leagues.py  test_notification_tasks.py  test_odds_import.py  test_scanner.py  test_team_stats_calculator.py  test_teams.py  test_telegram.py
(+135 files in other folders)
