[project]
name = "filterbets"
version = "0.1.0"
description = ""
authors = [
    {name = "Darius Kassi",email = "kassidarius@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "kaggle (>=1.8.3,<2.0.0)",
    "kagglehub (>=0.4.0,<0.5.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
